--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -48,3 +48,8 @@ img {
 img[alt='logo'] {
     width: 5rem;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-rows: auto minmax(100dvh, 100%) auto;
+}
