--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -123,7 +123,7 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+.template {
   font-family:var(--body-font);
   font-size: var(--normal-font-size);
   background-color:var(--body-color);
